Updating Package Info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "ido"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/colinp85/ido"
+license = "MIT"
+keywords = ["heterogeneous", "map"]
 
 [lib]
 name = "ido"
